--- a/app/src/main/res/menu/activity_paciente_drawer.xml
+++ b/app/src/main/res/menu/activity_paciente_drawer.xml
@@ -6,11 +6,11 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_camera"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/reportar"
             android:title="Nueva Cita" />
         <item
             android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/exp"
             android:title="Historial de citas" />
         <item
             android:id="@+id/nav_slideshow"
