--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,4 +18,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Doctor" />
+
+    <Button
+        android:id="@+id/btnPacientes"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Pacientes" />
 </android.widget.LinearLayout>
