--- a/app/src/main/res/menu/medicos.xml
+++ b/app/src/main/res/menu/medicos.xml
@@ -3,7 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/logout"
+        android:checkable="false"
+        android:enabled="true"
         android:orderInCategory="100"
         android:title="@string/action_settings"
+        android:visible="true"
         app:showAsAction="never" />
 </menu>
