--- a/app/src/main/res/layout/content_medicos.xml
+++ b/app/src/main/res/layout/content_medicos.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/contenido_medico"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".Medicos.Medicos"
     tools:showIn="@layout/app_bar_medicos">
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
