--- a/app/src/main/res/menu/activity_medicos_drawer.xml
+++ b/app/src/main/res/menu/activity_medicos_drawer.xml
@@ -7,19 +7,11 @@
         <item
             android:id="@+id/nav_camera"
             android:icon="@drawable/paciente"
-            android:title="Pacientes" />
+            android:title="Consultas" />
         <item
             android:id="@+id/nav_gallery"
             android:icon="@drawable/exp"
             android:title="Expedientes" />
-        <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/diagnostico"
-            android:title="Diagnosticos" />
-        <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/newdiag"
-            android:title="Nuevo Diagnostico" />
     </group>
 
 </menu>
