--- a/app/src/main/res/layout/fragment_main_ver_consultas.xml
+++ b/app/src/main/res/layout/fragment_main_ver_consultas.xml
@@ -29,7 +29,7 @@
     <!--</LinearLayout>-->
 
 
-    <ScrollView
+    <!--<ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -40,6 +40,10 @@
             android:layout_height="wrap_content" />
 
 
-    </ScrollView>
+    </ScrollView>-->
 
+    <ListView
+        android:id="@+id/lista_Consultas"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </android.widget.LinearLayout>
