--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -35,8 +35,9 @@
         android:inputType="textPassword" />
 
     <RadioGroup
+        android:id="@+id/rdbGrupo"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content">
 
         <RadioButton
             android:id="@+id/rbtEnfermera"
