--- a/app/src/main/res/layout/fragment_main_ver_consultas_medico.xml
+++ b/app/src/main/res/layout/fragment_main_ver_consultas_medico.xml
@@ -15,11 +15,11 @@
         android:orientation="vertical">
 
 
-        <TextView
-            android:id="@+id/textView3"
+        <ListView
+            android:id="@+id/lv_consultaMedico"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Prueba ver Consultas medico" />
+            android:layout_height="match_parent"
+            android:visibility="visible" />
     </LinearLayout>
 
 </android.widget.LinearLayout>
