--- a/app/src/main/res/layout/fragment_main_agregar_paciente.xml
+++ b/app/src/main/res/layout/fragment_main_agregar_paciente.xml
@@ -20,7 +20,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="50dp"
+        android:layout_margin="15dp"
         android:orientation="vertical">
 
         <TextView
@@ -107,6 +107,16 @@
         android:id="@+id/btnAgregar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        android:background="@color/design_default_color_primary"
         android:text="Crear" />
+
+    <Button
+        android:id="@+id/btnRegresar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        android:background="@color/design_default_color_primary"
+        android:text="Regresar" />
 
 </android.widget.LinearLayout>
