--- a/app/src/main/res/layout/activity_aprobar.xml
+++ b/app/src/main/res/layout/activity_aprobar.xml
@@ -28,19 +28,38 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/textView28"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Fecha Consulta:" />
 
-        <EditText
-            android:id="@+id/edtFechaEstado"
+        <TextView
+            android:id="@+id/txtFecha"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="20dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:ems="10"
-            android:inputType="textPersonName" />
+            android:text="Dui Paciente:" />
+
+        <TextView
+            android:id="@+id/txtDuiPaciente"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
 
     </LinearLayout>
 
@@ -55,37 +74,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Dui:" />
-
-        <EditText
-            android:id="@+id/edtDuiEstado"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ems="10"
-            android:inputType="textPersonName" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="20dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:text="Hora Consulta:" />
 
-        <EditText
-            android:id="@+id/edtHoraEstado"
+        <TextView
+            android:id="@+id/txtHora"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ems="10"
-            android:inputType="textPersonName" />
+            android:layout_weight="1" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -96,19 +92,18 @@
         android:visibility="visible">
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/textView6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Razón Consuta:" />
 
-        <EditText
-            android:id="@+id/edtRazonEstado"
+        <TextView
+            android:id="@+id/txtRazon"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ems="10"
-            android:inputType="textPersonName" />
+            android:layout_weight="1" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -119,16 +114,20 @@
 
         <TextView
             android:id="@+id/textView9"
-            android:layout_width="match_parent"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Doctor:" />
 
-        <Spinner
-            android:id="@+id/spinerDoctor"
+        <EditText
+            android:id="@+id/edtDuiDoctor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:ems="10"
+            android:hint="Ingrese Dui Doctor"
+            android:inputType="textPersonName" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -139,16 +138,20 @@
 
         <TextView
             android:id="@+id/Estado"
-            android:layout_width="match_parent"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Estado:" />
 
-        <Spinner
-            android:id="@+id/spinerEstado"
+        <EditText
+            android:id="@+id/edtEstado"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:ems="10"
+            android:hint="Aprobado / Desaprobado"
+            android:inputType="textPersonName" />
+
     </LinearLayout>
 
     <LinearLayout
